@@ -1,3 +1,10 @@
+2016-10-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClabel.c,
+	  src/SDCCset.h,
+	  src/SDCCset.c:
+	  Implement jump-to-jump optimization for jump tables RFE #514.
+
 2016-09-25 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (shiftLLong): support sizes 1,2,4,8,
